# TermiNull

./: .gitignore  Cargo.toml  README.md  config.example.json
packaging/: terminull.desktop
scripts/: package-linux.sh
src/: gui.rs  input.rs  layout.rs  main.rs  pty.rs  renderer.rs
